# Taiwan-Radio-Frequency-Allocations-Spectrum

./: README.md  pyproject.toml  spectrum.json  spectrum.pickle  spectrum_parser.py
taiwan-spectrum-search/: package.json
taiwan-spectrum-search/public/: index.html  manifest.json
taiwan-spectrum-search/src/: index.js
taiwan-spectrum-search/src/data/: spectrum.json
