[tool.poetry]
name = "taiwan_radio_frequency_allocations_spectrum"
version = "0.1.0"
description = "Taiwan Radio Frequency Allocations Spectrum"
authors = ["Louie Lu <git@louie.lu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pdfplumber = "^0.5.27"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
